# VTK-Volume-Visualisation-and-Flow-Visualisation

./: README.md
Part1/: Part1.py  README.md
Part1/headsq/: Task1.py  Transfer.py
Part2/: CMakeLists.txt
Part2/Code/: Solution1.cpp  Solution2.cpp  Solution3.cpp  Solution3_Carotid.cxx  Solution4.cpp  flowVisSample.cpp
